--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body %}
-<form class="form-signin w-100 m-auto">
+<form class="form-signin w-100 m-auto" action="/login" method="post">
     <img class="mb-4" src="{{url_for('static', filename='img/logo.png')}}" alt="" width="100" height="100">
     <h1 class="h3 mb-3 fw-normal">Inicio De Sesión</h1>
 
