--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,6 +1,6 @@
 {% extends './base.html' %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Página Principal{% endblock %}
 
 {% block body %}
     <h1>Bienvenido, {{ current_user.fullname }}</h1>
