--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -10,6 +10,7 @@
     {% endblock %}
 </head>
 <body class="text-center">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     {% block body %}
     {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
