--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -2,7 +2,28 @@
 
 {% block title %}Página Principal{% endblock %}
 
+{% block customCSS %}
+<link rel="stylesheet" href="{{url_for('static', filename='css/home.css')}}">
+{% endblock %}
+
 {% block body %}
-    <h1>Bienvenido, {{ current_user.fullname }}</h1>
-    <a class="btn btn-secondary" href="{{ url_for('logout') }}">Cerrar Sesión</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ms-auto">
+            <a class="btn btn-primary text-end" href="{{ url_for('logout') }}">Cerrar Sesión</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+<div class="container">
+    <h4>Bienvenido, {{ current_user.fullname }}</h4>
+    <a type="button" class="btn btn-info" href="#">Fechas</a>
+    <a type="button" class="btn btn-info" href="{{ url_for('categorias') }}">Categorias</a>
+</div>
 {% endblock %}
