--- a/src/templates/graficas/fechas.html
+++ b/src/templates/graficas/fechas.html
@@ -28,28 +28,33 @@
 </div>
 
 <script>
-    const info = JSON.parse('{{ data }}');
-    var etiquetas = ('{{ labels|tojson }}');
-    const lbls = JSON.parse(etiquetas)
-    const ctx = document.getElementById('myChart');
-    new Chart(ctx, {
+  var ctx = document.getElementById('myChart').getContext('2d');
+  var myChart = new Chart(ctx, {
       type: 'pie',
       data: {
-        labels: lbls,
-        datasets: [{
-          label: 'Mensajes Por Categoría',
-          data: info,
-          backgroundColor: [
-            'rgb(1, 190, 254)',
-            'rgb(255, 221, 0)',
-            'rgb(255, 125, 0)',
-            'rgb(255, 0, 109)',
-            'rgb(173, 255, 2)',
-            'rgb(143, 0, 255)'
+          labels: [
+              {% for row in data %}
+                  "{{ row[0] }}",
+              {% endfor %}
           ],
-          hoverOffset: 4
-        }]
+          datasets: [{
+              label: 'Mensajes recibidos',
+              data: [
+                  {% for row in data %}
+                      {{ row[1] }},
+                  {% endfor %}
+              ],
+              backgroundColor: [
+                'rgb(239, 71, 111)',
+                'rgb(247, 140, 107)',
+                'rgb(255, 209, 102)',
+                'rgb(6, 214, 160)',
+                'rgb(17, 138, 178)',
+                'rgb(7, 59, 76)'
+              ]
+          }]
       }
-    });
+  });
+</script>
 </script>
 {% endblock %}
