--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body %}
-<form class="form-signin w-100 m-auto" action="/login" method="post">
+<form class="form-signin w-100 m-auto text-center" action="/login" method="post">
     <img class="mb-4" src="{{url_for('static', filename='img/logo.png')}}" alt="" width="100" height="100">
     {% with messages = get_flashed_messages() %}
     {% if messages %}
