--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,4 +1,4 @@
-{% extends './base.html' %}
+{% extends './site.html' %}
 
 {% block title %}Página Principal{% endblock %}
 
@@ -6,10 +6,44 @@
 <link rel="stylesheet" href="{{url_for('static', filename='css/home.css')}}">
 {% endblock %}
 
+{% block nombre%}{{ current_user.fullname }}{% endblock %}
+
 {% block body %}
 <div class="container">
-    <h4>Bienvenido, {{ current_user.fullname }}</h4>
-    <a type="button" class="btn btn-info" href="{{ url_for('fechas') }}">Fechas</a>
-    <a type="button" class="btn btn-info" href="{{ url_for('categorias') }}">Categorias</a>
+    <h1>Servicios</h1>
+    <div class="row">
+        <div class="col-4">
+            <div class="card" style="width: 300px;">
+                <div class="card-body">
+                    <h5 class="card-title">Fechas</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="{{url_for('fechas')}}" class="btn btn-primary">Entrar</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-4">
+            <div class="card" style="width: 300px;">
+                <div class="card-body">
+                    <h5 class="card-title">Categorías</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="{{url_for('categorias')}}" class="btn btn-primary">Entrar</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-4">
+            <div class="card" style="width: 300px;">
+                <div class="card-body">
+                    <h5 class="card-title">Encuestas</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="{{url_for('encuestas')}}" class="btn btn-primary">Entrar</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
