--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,1 +1,27 @@
-<h1>Hello World from Flask.</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Asistencia Virtual</title>
+    <link rel="stylesheet" href="{{url_for('static', filename='css/index.css')}}">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+<body>
+    <div class="bgImage"></div>
+    <header>
+        <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand">
+                <img src="{{url_for('static', filename='img/logo.png')}}" width="30px">
+                Asistencia Virtual
+              </a>
+              <div class="d-flex">
+                <a class="btn btn-primary" href="{{url_for('login')}}">Iniciar Sesión</a>
+              </div>
+            </div>
+          </nav>
+    </header>
+</body>
+</html>
