--- a/src/templates/encuestas.html
+++ b/src/templates/encuestas.html
@@ -15,10 +15,9 @@
         <div class="col-4">
             <div class="card" style="width: 300px;">
                 <div class="card-body">
-                    <h5 class="card-title">Encuestas #1</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Entrar</a>
+                    <h5 class="card-title">Encuesta: Prueba</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet.</p>
+                    <a href="{{url_for('prueba')}}" class="btn btn-primary">Entrar</a>
                 </div>
             </div>
         </div>
