--- a/src/templates/site.html
+++ b/src/templates/site.html
@@ -25,7 +25,7 @@
                     Asistencia Virtual
                 </a>
                 <div class="d-flex">
-                    <a class="navbar-brand">{% block nombre%}{% endblock %}</a>
+                    <a class="navbar-brand">{{current_user.fullname}}</a>
                     <a class="btn btn-primary" href="{{url_for('logout')}}">Cerrar Sesión</a>
                 </div>
             </div>
